--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1> This is my Index page</h1>
 
 <a href="aboutus.html">Go to about us page</a>
+<a href="contactus.html">Go to contact us page</a>
